# PC-Peroxide

./: AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PHASES.md  EVALUATION_REPORT.md  README.md  REFOCUS_PLAN.md  SECURITY.md  build.bat  full-scan.bat  quick-scan.bat  run.bat  setup-windows.bat
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: signatures.json
src/: gui_main.rs  lib.rs  main.rs
src/analysis/: inference.rs  mod.rs
src/analysis/providers/: mod.rs  ollama.rs  openai.rs
src/core/: config.rs  error.rs  mod.rs  reporting.rs  types.rs
src/detection/: database.rs  matcher.rs  mod.rs  signature.rs
src/detection/heuristic/: entropy.rs  imports.rs  mod.rs  packer.rs  pe.rs  scoring.rs
src/detection/yara/: engine.rs  mod.rs  rules.rs
src/quarantine/: encryption.rs  metadata.rs  mod.rs  operations.rs  vault.rs  whitelist.rs
src/scanner/: archive.rs  file.rs  filetype.rs  mod.rs  progress.rs  results.rs
src/scanner/browser/: extensions.rs  hijack.rs  mod.rs
src/scanner/network/: connections.rs  mod.rs  ports.rs
src/scanner/persistence/: mod.rs  registry.rs  startup.rs  tasks.rs
src/scanner/process/: enumerate.rs  memory.rs  mod.rs  patterns.rs
src/ui/: cli.rs  mod.rs
src/ui/gui/: app.rs  dashboard.rs  mod.rs  quarantine_view.rs  results_view.rs  scan_view.rs  settings_view.rs  theme.rs  updates.rs
src/ui/report/: csv.rs  html.rs  mod.rs  pdf.rs
src/utils/: hash.rs  logging.rs  mod.rs  retry.rs
