[package]
name = "pc-peroxide"
version = "0.1.0"
edition = "2021"
authors = ["PC-Peroxide Team"]
description = "A lightweight, portable malware detection and removal utility for Windows systems"
license = "MIT"
repository = "https://github.com/kase1111-hash/PC-Peroxide"
keywords = ["malware", "security", "antivirus", "scanner", "windows"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# File system utilities
walkdir = "2.4"
globset = "0.4"

# Hashing
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Directory paths
dirs = "5.0"

# Compression/archives
zip = "0.6"

# PE/ELF parsing
goblin = "0.8"

# Encryption (for quarantine vault)
aes-gcm = "0.10"
rand = "0.8"

# Pattern matching (for YARA-like rules)
regex = "1.10"

# GUI (optional feature)
eframe = { version = "0.24", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.24", optional = true, features = ["image"] }
image = { version = "0.24", optional = true, default-features = false, features = ["png"] }
rfd = { version = "0.12", optional = true }  # File dialogs

# HTTP client (for signature updates)
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }

# System tray
tray-icon = { version = "0.11", optional = true }

[features]
default = []
gui = ["eframe", "egui_extras", "image", "rfd", "tray-icon", "reqwest"]

[target.'cfg(windows)'.dependencies]
# Windows-specific APIs
winreg = "0.52"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]}

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "pc-peroxide"
path = "src/main.rs"

[[bin]]
name = "pc-peroxide-gui"
path = "src/gui_main.rs"
required-features = ["gui"]
